# amalitechkafkalab

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
consumers/: app.py  db_client.py  validator.py
core/: config.py  healthcheck.py  logging.py  models.py
database/: schema.sql
database/migrations/: 001_create_heart_rate_logs.sql  002_enforce_heart_rate_log_quality.sql
databse/: schema.sql
docs/: RUNBOOK.md
grafana/dashboards/: heartbeat-overview.json
grafana/provisioning/alerting/: heartbeat-alerts.yml
grafana/provisioning/dashboards/: heartbeat.yml
grafana/provisioning/datasources/: postgres.yml
producers/: app.py  generator.py
tests/: pipeline_test.py  test_consumer.py  test_db_client.py  test_integration_pipeline.py  test_models.py  test_validator.py
